fixed emojis in citations way too big

--- a/projects/demo/src/styles.scss
+++ b/projects/demo/src/styles.scss
@@ -10,3 +10,9 @@
 span.emoji-pipe-image {
     margin-bottom: -0.45rem;
 }
+
+.scu-citation {
+    span.emoji-pipe-image {
+        margin-bottom: -0.2rem;
+    }
+}
